package observerpattern.baitapca1;

public interface myStream_listener<T> {
  void onEvent(T event);
}
